feat: js file path update

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <div id="widget-container"></div>
   
   <!-- Include the widget -->
-  <script src="/orma-feedback-widget.js"></script>
+  <script src="/public/orma-feedback-widget.js"></script>
   <script>
     new FeedbackWidget({
       logo: "https://via.placeholder.com/100",
