Test: trying to call the function without new

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <!-- Include the widget -->
   <script src="orma-feedback-widget.js"></script>
   <script>
-    new FeedbackWidget({
+    FeedbackWidget({
       logo: "https://via.placeholder.com/100",
       projectId: "40upj2zovljic30",
     });
